# Syndesis

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  environment.yml  pyproject.toml
configs/: agents.yaml  data_sources.yaml  docking.yaml  gnina.yaml  md.yaml  paper_analysis.yaml  pose_model.yaml  project.yaml  project_scope.yaml  prolif.yaml  receptor_prep.yaml  stage10_ablation_benchmark.yaml  stage11_md_stress_test.yaml  stage12_candidate_dossiers.yaml  stage1_cocrystal_benchmark.yaml  stage2_receptor_ensemble.yaml  stage3_redocking_crossdocking.yaml  stage4_rescoring.yaml  stage5_interaction_atlas.yaml  stage6_pose_model.yaml  stage7_candidate_library.yaml  stage8_candidate_screening.yaml  stage9_agentic_analog_loop.yaml  stage9_deterministic_analogs.yaml  tools.example.yaml
data/: README.md  md_system_code_map.csv
docs/: reproducibility_notes.md  stage0_scope_decisions.md  stage0_source_registry.md  stage10_ablation_plan.md  stage10_benchmark_protocol.md  stage10_metric_definitions.md  stage10_source_registry.md  stage10_statistical_testing.md  stage11_force_field_policy.md  stage11_ligand_parameterization.md  stage11_md_protocol.md  stage11_md_stability_metrics.md  stage11_non_claims.md  stage11_source_registry.md  stage12_candidate_card_schema.md  stage12_candidate_dossier_protocol.md  stage12_non_claims.md  stage12_ranking_and_decision_policy.md  stage12_source_registry.md  stage12_visualization_policy.md  stage1_curation_protocol.md  stage1_quality_tiers.md  stage1_source_registry.md  stage2_receptor_ensemble_protocol.md  stage2_receptor_selection_rules.md  stage2_source_registry.md  stage2_state_labels.md  stage3_failure_taxonomy.md  stage3_pose_labeling_rules.md  stage3_redocking_crossdocking_protocol.md  stage3_source_registry.md  stage4_gnina_usage.md  stage4_rescoring_protocol.md  stage4_score_interpretation.md  stage4_source_registry.md  stage5_interaction_atlas_protocol.md  stage5_interaction_recovery_labels.md  stage5_key_interactions.md  stage5_plip_crosscheck.md  stage5_source_registry.md  (+23 more)
manuscript/: references.bib  syndesis_jcheminformatics_v2.qmd  syndesis_jcheminformatics_v2_content.md
results/: README.md
scripts/: active_native_similarity_analysis.py  audit_receptor_consistency.py  build_corrected_enrichment_masters.py  build_corrected_prospective_ranking.py  build_prospective_zinc_library.py  cdk2_native_overlap_audit.py  create_manuscript_figures.py  create_pose_coupling_workflow.py  create_receptor_sensitivity_figures.py  create_structural_figure.py  export_enrichment_pose_fingerprints.py  export_md_timeseries.py  extract_md_trajectory_snapshots.py  finalize_all_reports.sh  fingerprint_cdk2_1pxn_altloc.py  native_prior_sensitivity_analysis.py  package_md_reproducibility.py  verify_results.py  (+11 more)
(+675 files in other folders)
