[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egfr-dockingforge"
version = "0.1.0"
description = "Syndesis: evidence-concordant, interaction-constrained EGFR ATP-site analog design workflow."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "biopython>=1.83",
  "click>=8.1",
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "pyyaml>=6",
  "requests>=2.31",
  "tqdm>=4.66",
  # Scientific stack (required to run the pipeline stages)
  "rdkit>=2023.9",
  "MDAnalysis>=2.6,<3",
  "scikit-learn>=1.3,<2",
  "lightgbm>=4.0,<5",
  "xgboost>=2.0,<3",
  "catboost>=1.2,<2",
  "prolif>=2.0,<3",
  "scipy>=1.11,<2",
  "shap>=0.44,<1",
  "openpyxl>=3.1,<4",  # pandas .to_excel() xlsx export engine
  # NOTE: openbabel, gromacs, gnina and vina are external, non-pip tools
  # (conda/system binaries or Docker images). Install them separately (e.g. via
  # conda/micromamba, your OS package manager, or the gnina/gnina Docker image);
  # they are intentionally not listed here.
  # NOTE: openmm and pdbfixer are imported by the Stage 5 ProLIF engine but are
  # distributed via conda-forge (not reliably pip-installable). They are declared
  # here for completeness; install from conda-forge in practice.
  "openmm>=8.1,<9",
  "pdbfixer>=1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
egfrforge = "egfr_dockingforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
